@@ -107,7 +107,7 @@ journalism:
 GROUP BY
 ========
 
-journalism's :meth:`.Table.group_by` works slightly different than SQLs. It does not require an aggregate function. Instead it returns :py:class:`journalism.tableset.TableSet`. To see how to perform the equivalent of a SQL aggregate, see below.
+journalism's :meth:`.Table.group_by` works slightly different than SQLs. It does not require an aggregate function. Instead it returns :py:class:`.TableSet`. To see how to perform the equivalent of a SQL aggregate, see below.
 
 .. code-block:: python
 
